--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -15,6 +15,10 @@ body {
   min-height: 100vh;
 }
 
+textarea {
+  font-family: 'Mulish', sans-serif;
+}
+
 ::selection {
   background: #b7fbe28c;
 }
@@ -26,7 +30,7 @@ body {
   }
 }
 
-textarea, option, select, input {
+option, select, input {
   font-family: 'Mulish', sans-serif;
 }
 
@@ -51,6 +55,7 @@ select {
 .inlineFlex {
   display: inline-flex;
 }
+
 .flexWrap {
   flex-wrap: wrap;
 }
@@ -58,15 +63,21 @@ select {
 .alignCenter {
   align-items: center;
 }
+
 .alignSelfCenter {
   align-self: center;
 }
+
 .alignItemsStart {
   align-items: flex-start;
+}
+.justifyContentStart {
+  justify-content: flex-start;
 }
 .alignItemsCenter {
   align-items: center;
 }
+
 .justifyCenter {
   justify-content: center;
 }
@@ -88,7 +99,7 @@ select {
   position: relative;
 }
 
-.scrollingTableContainer {
+.scrolling-table-container {
   overflow-x: auto;
   max-width: 100%;
   td, th {
@@ -100,7 +111,98 @@ select {
   }
 }
 
+.no-margin-bot {
+  p, select, button {
+    margin-bottom: 0 !important;
+  }
+  margin-bottom: 0 !important;
+}
+
+.centerLeftAlignedContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .marginAuto {
+  margin: auto;
+}
+
+.no-margin-top {
+  margin-top: 0 !important;
+}
+.margin-2 {
+  margin: 2px;
+}
+.margin-4 {
+  margin: 4px;
+}
+.margin-8 {
+  margin: 8px;
+}
+.margin-top-2 {
+  margin-top: 2px;
+}
+.margin-top-4 {
+  margin-top: 4px;
+}
+.margin-top-8 {
+  margin-top: 8px;
+}
+.margin-top-10 {
+  margin-top: 10px;
+}
+.margin-top-12 {
+  margin-top: 12px;
+}
+.margin-top-16 {
+  margin-top: 16px;
+}
+.margin-top-32 {
+  margin-top: 32px;
+}
+.margin-bottom-1 {
+  margin-bottom: 1px;
+}
+.margin-bottom-4 {
+  margin-bottom: 4px;
+}
+.margin-bottom-8 {
+  margin-bottom: 8px;
+}
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+.margin-bottom-16 {
+  margin-bottom: 16px;
+}
+.margin-left-4 {
+  margin-left: 4px;
+}
+.margin-left-8 {
+  margin-left: 8px;
+}
+.margin-left-10 {
+  margin-left: 10px;
+}
+.margin-left-16 {
+  margin-left: 16px;
+}
+.margin-left-32 {
+  margin-left: 32px;
+}
+.margin-right-4 {
+  margin-right: 4px;
+}
+.margin-right-8 {
+  margin-right: 8px;
+}
+.margin-right-16 {
+  margin-right: 16px;
+}
+.margin-right-32 {
+  margin-right: 32px;
+}
+.m-auto {
   margin: auto;
 }
 .m-0 {
@@ -135,6 +237,9 @@ select {
 }
 .mt-16 {
   margin-top: 1rem;
+}
+.mt-24 {
+  margin-top: 1.5rem;
 }
 .mt-32 {
   margin-top: 2rem;
@@ -211,19 +316,136 @@ select {
 .mr-40 {
   margin-right: 2.5rem;
 }
+.items-margin-right-s {
+  &>* {
+    margin-right: 0.25rem;
+  }
+}
 
-.simpleShadow {
+.yTable {
+  border-collapse: collapse;
+  p {
+    font-size: 1rem;
+  }
+  td, th {
+    text-align: left;
+    padding: 0.5rem 0.75rem;
+  }
+  thead>tr {
+    background-color: black;
+  }
+  th {
+    font-family: 'Mulish', sans-serif;
+    font-weight: 600;
+    background-color: #f5f5f5;
+  }
+  tr {
+    &:hover {
+      background: #aeecff33;
+    }
+    border: 1px solid #aaaaaa44;
+    border-left: none;
+    border-right: none;
+  }
+}
+
+.yTableLeft {
+  td {
+    text-align: left;
+  }
+}
+
+.admin-mini-header {
+  font-weight: 400;
+  margin-bottom: 6px;
+}
+
+.selected-add-keyword {
+  &:hover {
+    @media (min-width: 900px) {
+      cursor: pointer;
+      text-decoration: line-through;
+      color: $themeRed;
+    }
+  }
+  font-size: 14px;
+}
+
+.keyword-to-be-deleted {
+  color: $themeRed !important;
+  text-decoration: line-through;
+}
+
+.keyword, .keywordStatic {
+  font-size: 12px;
+  border: 0.5px solid #ccc; //todo
+  margin: 1.5px 3px;
+  padding: 0.5px 6px 1px 6px;
+  border-radius: 10px;
+  font-weight: 300;
+}
+.keyword {
+  @include simpleshadowSmall;
+  border: none;
+  transition: background-color 100ms, border-color 100ms, box-shadow 100ms;
+  &:hover {
+    color: $themeGreen1Darker !important;
+    border-color: $themeGreen1Darker;
+    cursor: pointer;
+  }
+}
+.keywordStatic:hover {
+  cursor: default;
+}
+
+.simple-shadow, .simpleShadow {
   @include simpleshadow;
 }
 .simpleShadowNoHover {
   @include simpleshadowNoHover;
 }
-.simpleShadowSmall {
+.simple-shadow-small {
   @include simpleshadowSmall;
 }
 
+.horizontal-wrapper-4 {
+  display: grid;
+  gap: 4px;
+  justify-items: center;
+  grid-auto-flow: row;
+  @media (min-width: 900px) {
+    grid-auto-flow: column;
+  }
+}
+
+.fitContent {
+  height: fit-content;
+  width: fit-content;
+}
+
+.material-design-icon.icon-2x {
+  height: 3rem;
+  width: 3rem;
+}
+ 
+.material-design-icon.icon-2x > .material-design-icon__svg {
+  height: 3rem;
+  width: 3rem;
+}
+
 .dark {
-  input:not(.paddedInput):not([type=range]), textarea {
+  .yTable {
+    tr {
+      &:hover {
+        background: rgba(240, 249, 255, 0.08);
+      }
+    }
+    th {
+      background-color: $themeDark2;
+    }
+  }
+
+  input:not(.paddedInput):not(.selected ):not([type=range]), textarea {
     background: rgb(22, 26, 29);
     border: 1px solid #666;
     color: white;
@@ -233,5 +455,31 @@ select {
     background: rgb(22, 26, 29);
     color: white;
     border: 1px solid #666;
+  }
+
+  .admin-content-box {
+    &:hover {
+      background-color: $themeDark1  
+    }
+  }
+  .admin-content-box-open {
+    background-color: $themeDark2 !important;
+  }
+  .keyword, .keywordStatic {
+    background-color: $themeGray10;
+    color: white !important;
+    box-shadow: none;
+  }
+  .keyword:hover {
+    background-color: $themeBlueDT;
+  }
+  .keywordStatic {
+    background-color: transparent;
+  }
+}
+
+.no-table-hover {
+  tr:hover {
+    background: none !important;
   }
 }
