--- a/src/scss/button-styles.scss
+++ b/src/scss/button-styles.scss
@@ -1,5 +1,20 @@
 @import "shadows.scss";
 
+.blueButton {
+  border: none;
+  background: #00aaff;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 2px;
+  a, p, span, svg {
+    color: white;
+  }
+  @include simpleshadowSmall;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 $buttonPaddingSides: 12px;
 $buttonPaddingTopBot: 6px;
 $buttonBorderWidth: 2px;
@@ -70,7 +85,7 @@ $buttonBorderWidth: 2px;
 
 .yButtonRound {
   border-radius: 50px;
-  padding: 0.4rem 0.5rem;
+  padding: 0.4rem;
 }
 
 .y-button-red {
@@ -104,14 +119,14 @@ $buttonBorderWidth: 2px;
 
 .y-button-disabled {
   border-color: $themeGray4;
-  background-color: transparent;
-  color: $themeGray4;
+  background-color: $themeGray4;
+  color: #f5f5f5;
   box-shadow: none;
   &:hover, &:focus {
     cursor: not-allowed;
     border-color: $themeGray4;
-    background-color: transparent;
-    color: $themeGray4;
+    background-color: $themeGray4;
+    color: #f5f5f5;
     box-shadow: none !important;
     &::before {
       box-shadow: none !important;
@@ -167,8 +182,11 @@ $buttonBorderWidth: 2px;
 
 .button-with-icon {
   padding-right: 15px;
+  span {
+    margin-right: 4px;
+  }
   svg {
-    margin-bottom: 1px;
+    margin-bottom: 2px;
   }
 }
 
@@ -313,15 +331,15 @@ $buttonBorderWidth: 2px;
 
 
   .y-button-disabled {
-    border-color: $themeGray6;
-    background-color: transparent;
-    color: $themeGray6;
+    border-color: $themeGray8;
+    background-color: $themeGray8;
+    color: #aaa;
     box-shadow: none;
     &:hover, &:focus {
       cursor: not-allowed;
-      border-color: $themeGray6;
-      background-color: transparent;
-      color: $themeGray6;
+      border-color: $themeGray8;
+      background-color: $themeGray8;
+      color: #aaa;
     }
   }
 
@@ -337,8 +355,8 @@ $buttonBorderWidth: 2px;
   }
 
   .pretty-input-upload {
-    background: transparent !important;
-    border-color: $themeBlueDTDarker;
+    background: $themeBlueDT !important;
+    border-color: $themeBlueDT;
 
     svg, span, p {
       color: #eee;
@@ -346,8 +364,8 @@ $buttonBorderWidth: 2px;
 
     &:hover, &:focus {
       background-color: $themeDark2;
-      background: $themeBlueDT !important;
-      border-color: $themeBlueDT !important;
+      background: $themeBlueDTDarker !important;
+      border-color: $themeBlueDTDarker !important;
 
     }
   }
