--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -33,6 +33,9 @@ textarea {
 option, select, input {
   font-family: 'Mulish', sans-serif;
 }
+input {
+  font-size: 1rem;
+}
 
 select {
   padding: 1px;
