Update landing page and application form for new ad type

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -46,6 +46,7 @@ $themeGreen1Dark: #49ded7;
 $themeGreen2Dark: #5df1ba;
 $themeGreen1Darker: #08ccc2;
 $themeGreen2Darker: #1cda94;
+$themeGreen2Darker2: #0bb476;
 $themeGreen1Disabled: transparent;
 $themeGreen2Disabled: transparent;
 $themeGreen1Trans: #9aebe7AA;
